UseCaseCoverageCore/tests/snapshots/e2e_test__multiple_features_scenario.snap
---
source: UseCaseCoverageCore/tests/e2e_test.rs
assertion_line: 58
expression: features
---
- sourcePath: feature1.ucc
  schemaVersion: "1.0"
  feature:
    id: feature-1
    title: First Feature
    createdAt: 2026-05-10
    updatedAt: ~
    lastModifiedAt: ~
    description: "First feature with multiple use cases and bugs.\n"
  tags: []
  platforms: []
  relatedFeatures: []
  artifacts:
    - id: f1-bug-001
      artifactType: regression
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: Bug F1
      priority: none
      related: []
      platforms: []
      steps: []
      expected: []
    - id: f1-ucc-001
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: First use case F1
      priority: high
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
    - id: f1-ucc-002
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: Second use case F1
      priority: medium
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
- sourcePath: feature2.ucc
  schemaVersion: "1.0"
  feature:
    id: feature-2
    title: Second Feature
    createdAt: 2026-05-10
    updatedAt: ~
    lastModifiedAt: ~
    description: "Second feature with multiple use cases and bugs.\n"
  tags: []
  platforms: []
  relatedFeatures: []
  artifacts:
    - id: f2-bug-001
      artifactType: regression
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: Bug 1 F2
      priority: none
      related: []
      platforms: []
      steps: []
      expected: []
    - id: f2-bug-002
      artifactType: regression
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: Bug 2 F2
      priority: none
      related: []
      platforms: []
      steps: []
      expected: []
    - id: f2-ucc-001
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: First use case F2
      priority: high
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
    - id: f2-ucc-002
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: ~
      title: Second use case F2
      priority: medium
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
