UseCaseCoverageCore/tests/snapshots/e2e_test__multiple_use_cases_and_bugs_scenario.snap
---
source: UseCaseCoverageCore/tests/e2e_test.rs
assertion_line: 44
expression: features
---
- sourcePath: feature.ucc
  schemaVersion: "1.0"
  feature:
    id: feature-multiple-use-cases-and-bugs
    title: Feature with multiple use cases and bugs
    createdAt: 2026-05-10
    updatedAt: ~
    lastModifiedAt: "2026-05-10 15:50"
    description: "This scenario contains 1 feature, multiple use cases, and multiple bugs.\n"
  tags: []
  platforms: []
  relatedFeatures: []
  artifacts:
    - id: bug-001
      artifactType: regression
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: "2026-05-10 15:50"
      title: First bug
      priority: none
      related:
        - ucc-001
      platforms: []
      steps: []
      expected: []
    - id: bug-002
      artifactType: regression
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: "2026-05-10 15:50"
      title: Second bug
      priority: none
      related:
        - ucc-002
      platforms: []
      steps: []
      expected: []
    - id: ucc-001
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: "2026-05-10 15:50"
      title: First use case
      priority: high
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
    - id: ucc-002
      artifactType: ~
      createdAt: 2026-05-10
      updatedAt: ~
      lastModifiedAt: "2026-05-10 15:50"
      title: Second use case
      priority: medium
      related: []
      platforms: []
      steps:
        - Step 1
      expected: []
